--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 <body>
     <div class="container">
         <div class="clock">
-            <input class="number" type="text" maxlength="2" value="00"><span>hs</span><input class="number" type="text" maxlength="2" value="00"><span>min</span><input class="number" type="text" maxlength="2" value="00"><span>seg</span>
+            <input class="number" type="text" maxlength="2" value="00"><span>hs</span>
+            <input class="number" type="text" maxlength="2" value="00"><span>min</span>
+            <input class="number" type="text" maxlength="2" value="00"><span>seg</span>
         </div>
         <div class="buttons">
             <button id="play" onclick="startTimer()"></button>
